// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/svelte.js should extract CSS from a <link> tag ("existing script") 1`] = `
"

<div class=\\"flex wrapper\\">
    <h1 class=\\"flex fooga hd\\">Head</h1>
    <div class=\\"fooga wooga bd\\">
        <p class=\\"{bool ? \\"text\\" : \\"active\\" }\\">Text</p>
    </div>
</div>

<script>import css from \\"./external.css\\";
            
export default {
data : () => ({
    bool : true
}),

oncreate() {
    const bd = {
        flex : \\"flex\\"
    };

    const style = css[bd.flex];
}
};</script>
"
`;

exports[`/svelte.js should extract CSS from a <link> tag ("existing script") 2`] = `
"/* packages/svelte/test/specimens/simple.css */
.fooga {
    color: red;
}
/* packages/svelte/test/specimens/dependencies.css */
.wooga {

    background: blue;
}
/* packages/svelte/test/specimens/external.css */
.flex {
    display: flex;
}
.text {
    color: #000;
}
.active {
    color: #F00;
}
"
`;

exports[`/svelte.js should extract CSS from a <link> tag ("no script") 1`] = `
"

<div class=\\"flex wrapper\\">
    <h1 class=\\"flex fooga hd\\">Head</h1>
    <div class=\\"fooga wooga bd\\">
        <p class=\\"{bool ? \\"text\\" : \\"active\\" }\\">Text</p>
    </div>
</div>
<script>
    import css from \\"./external.css\\";
</script>"
`;

exports[`/svelte.js should extract CSS from a <link> tag ("no script") 2`] = `
"/* packages/svelte/test/specimens/simple.css */
.fooga {
    color: red;
}
/* packages/svelte/test/specimens/dependencies.css */
.wooga {

    background: blue;
}
/* packages/svelte/test/specimens/external.css */
.flex {
    display: flex;
}
.text {
    color: #000;
}
.active {
    color: #F00;
}
"
`;

exports[`/svelte.js should extract CSS from a <link> tag ("single quotes") 1`] = `
"

<div class=\\"flex wrapper\\">
    <h1 class=\\"flex fooga hd\\">Head</h1>
    <div class=\\"fooga wooga bd\\">
        <p class=\\"{bool ? \\"text\\" : \\"active\\" }\\">Text</p>
    </div>
</div>
<script>
    import css from \\"./external.css\\";
</script>"
`;

exports[`/svelte.js should extract CSS from a <link> tag ("single quotes") 2`] = `
"/* packages/svelte/test/specimens/simple.css */
.fooga {
    color: red;
}
/* packages/svelte/test/specimens/dependencies.css */
.wooga {

    background: blue;
}
/* packages/svelte/test/specimens/external.css */
.flex {
    display: flex;
}
.text {
    color: #000;
}
.active {
    color: #F00;
}
"
`;

exports[`/svelte.js should extract CSS from a <link> tag ("unquoted") 1`] = `
"

<div class=\\"flex wrapper\\">
    <h1 class=\\"flex fooga hd\\">Head</h1>
    <div class=\\"fooga wooga bd\\">
        <p class=\\"{bool ? \\"text\\" : \\"active\\" }\\">Text</p>
    </div>
</div>
<script>
    import css from \\"./external.css\\";
</script>"
`;

exports[`/svelte.js should extract CSS from a <link> tag ("unquoted") 2`] = `
"/* packages/svelte/test/specimens/simple.css */
.fooga {
    color: red;
}
/* packages/svelte/test/specimens/dependencies.css */
.wooga {

    background: blue;
}
/* packages/svelte/test/specimens/external.css */
.flex {
    display: flex;
}
.text {
    color: #000;
}
.active {
    color: #F00;
}
"
`;

exports[`/svelte.js should extract CSS from a <style> tag 1`] = `
"<div class=\\"flex wrapper\\">
    <h1 class=\\"flex fooga hd\\">Head</h1>
    <div class=\\"fooga wooga bd\\">
        <p class=\\"{bool ? \\"text\\" : \\"active\\" }\\">Text</p>
    </div>
</div>

<style>/* replaced by modular-css */</style>

<script>
export default {
    data : () => ({
        bool : true
    })
};
</script>
"
`;

exports[`/svelte.js should extract CSS from a <style> tag 2`] = `
"/* packages/svelte/test/specimens/simple.css */
.fooga {
    color: red;
}
/* packages/svelte/test/specimens/dependencies.css */
.wooga {

    background: blue;
}
/* packages/svelte/test/specimens/style.html */
.flex {
        display: flex;
    }
.text {
        color: #000;
    }
.active {
        color: #F00;
    }
"
`;

exports[`/svelte.js should handle errors: "empty css file - <link>" 1`] = `"@modular-css/svelte: Unable to find .nope, .alsonope in \\"./empty.css\\""`;

exports[`/svelte.js should handle errors: "empty css file - <link>" 2`] = `
Array [
  Array [
    "@modular-css/svelte: Unable to find .nope in \\"./empty.css\\"",
  ],
  Array [
    "@modular-css/svelte: Unable to find .alsonope in \\"./empty.css\\"",
  ],
]
`;

exports[`/svelte.js should handle errors: "empty css file - <link>" 3`] = `
"

<div class=\\"{css.nope}\\">NOPE</div>
<div class=\\"{css.alsonope}\\">STILL NOPE</div>
<script>
    import css from \\"./empty.css\\";
</script>"
`;

exports[`/svelte.js should handle errors: "empty css file - <style>" 1`] = `"@modular-css/svelte: Unable to find .nope, .alsonope in \\"<style>\\""`;

exports[`/svelte.js should handle errors: "empty css file - <style>" 2`] = `
Array [
  Array [
    "@modular-css/svelte: Unable to find .nope in \\"<style>\\"",
  ],
  Array [
    "@modular-css/svelte: Unable to find .alsonope in \\"<style>\\"",
  ],
]
`;

exports[`/svelte.js should handle errors: "empty css file - <style>" 3`] = `
"<div class=\\"{css.nope}\\">NOPE</div>
<div class=\\"{css.alsonope}\\">STILL NOPE</div>

<style>/* replaced by modular-css */</style>
"
`;

exports[`/svelte.js should handle errors: "invalid reference <script> - <link>" 1`] = `"@modular-css/svelte: Unable to find .nuhuh in \\"./invalid.css\\""`;

exports[`/svelte.js should handle errors: "invalid reference <script> - <link>" 2`] = `
Array [
  Array [
    "@modular-css/svelte: Unable to find .nuhuh in \\"./invalid.css\\"",
  ],
]
`;

exports[`/svelte.js should handle errors: "invalid reference <script> - <link>" 3`] = `
"

<h2 class=\\"yup\\">Yup</h2>

<script>import css from \\"./invalid.css\\";
            
console.log(css.nuhuh);</script>
"
`;

exports[`/svelte.js should handle errors: "invalid reference <script> - <style>" 1`] = `"@modular-css/svelte: Unable to find .nuhuh in \\"<style>\\""`;

exports[`/svelte.js should handle errors: "invalid reference <script> - <style>" 2`] = `
Array [
  Array [
    "@modular-css/svelte: Unable to find .nuhuh in \\"<style>\\"",
  ],
]
`;

exports[`/svelte.js should handle errors: "invalid reference <script> - <style>" 3`] = `
"<h2 class=\\"yup\\">Yup</h2>

<style>/* replaced by modular-css */</style>

<script>
    console.log(css.nuhuh);
</script>
"
`;

exports[`/svelte.js should handle errors: "invalid reference template - <link>" 1`] = `"@modular-css/svelte: Unable to find .nope in \\"./invalid.css\\""`;

exports[`/svelte.js should handle errors: "invalid reference template - <link>" 2`] = `
Array [
  Array [
    "@modular-css/svelte: Unable to find .nope in \\"./invalid.css\\"",
  ],
]
`;

exports[`/svelte.js should handle errors: "invalid reference template - <link>" 3`] = `
"

<h1 class=\\"{css.nope}\\">Nope</h1>
<h2 class=\\"yup\\">Yup</h2>
<script>
    import css from \\"./invalid.css\\";
</script>"
`;

exports[`/svelte.js should handle errors: "invalid reference template - <style>" 1`] = `"@modular-css/svelte: Unable to find .nope in \\"<style>\\""`;

exports[`/svelte.js should handle errors: "invalid reference template - <style>" 2`] = `
Array [
  Array [
    "@modular-css/svelte: Unable to find .nope in \\"<style>\\"",
  ],
]
`;

exports[`/svelte.js should handle errors: "invalid reference template - <style>" 3`] = `
"<h1 class=\\"{css.nope}\\">Nope</h1>
<h2 class=\\"yup\\">Yup</h2>

<style>/* replaced by modular-css */</style>
"
`;

exports[`/svelte.js should ignore files without <style> blocks 1`] = `
"<h1>Hello</h1>
<script>console.log(\\"output\\")</script>"
`;

exports[`/svelte.js should ignore files without <style> blocks 2`] = `""`;

exports[`/svelte.js should remove files before reprocessing in case they changed 1`] = `
"
<div class=\\"source\\">Source</div><script>
    import css from \\"./source.css\\";
</script>"
`;

exports[`/svelte.js should remove files before reprocessing in case they changed 2`] = `
"/* packages/svelte/test/output/source.css */
.source {
    color: red;
}"
`;

exports[`/svelte.js should remove files before reprocessing in case they changed 3`] = `
"
<div class=\\"source\\">Source</div><script>
    import css from \\"./source.css\\";
</script>"
`;

exports[`/svelte.js should remove files before reprocessing in case they changed 4`] = `
"/* packages/svelte/test/output/source.css */
.source {
    color: blue;
}"
`;

exports[`/svelte.js should throw on both <style> and <link> in one file 1`] = `"@modular-css/svelte: use <style> OR <link>, but not both"`;
